[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/Ghost.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Scared ghost.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Ghost.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Scared",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Attacking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.44758

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.71753
height = 0.751099

[sub_resource type="CircleShape2D" id=4]
radius = 145.046

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprites" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Scared"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
